[tool.poetry]
name = "airbnb-scraper-threads"
version = "0.1.0"
description = ""
authors = ["Edoardo Busetti <edoardo.busetti@revolut.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.18.1"
bs4 = "^0.0.2"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
